--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,8 +5,13 @@
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="mb-4">
+      <%= f.label :full_name, class: "block text-gray-700 font-bold mb-2" %>
+      <%= f.text_field :full_name, autofocus: true, placeholder: "Enter your full name", class: "block w-full px-3 py-2 bg-white border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+    </div>
+
+    <div class="mb-4">
       <%= f.label :email, class: "block text-gray-700 font-bold mb-2" %>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "block w-full px-3 py-2 bg-white border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+      <%= f.email_field :email, autocomplete: "email", class: "block w-full px-3 py-2 bg-white border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" %>
     </div>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
