--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,9 +23,7 @@
     <%= javascript_importmap_tags %>
     <%= javascript_include_tag 'autosuggestion', 'data-turbo-track': 'reload' %>
 
-    <% if Rails.application.credentials.dig(:recaptcha, :site_key).present? %>
-      <script src="https://www.google.com/recaptcha/api.js?render=<%= Rails.application.credentials.dig(:recaptcha, :site_key) %>"></script>
-    <% end %>
+   <%= yield :recaptcha_script %>
   </head>
 
   <body>
