--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
     <div class="md:flex md:justify-between md:gap-8 space-y-8 md:space-y-0">
       <!-- Logo and Newsletter -->
       <div class="md:w-1/4">
-        <img src="path/to/your/logo.png" alt="Logo" class="h-12 mb-4" />
+        <img src="/images/logo.svg" alt="Logo" class="h-48 mb-4" />
         <h4 class="text-lg font-semibold mb-4">Subscribe to our Newsletter</h4>
         <form class="flex flex-col space-y-4">
           <input type="email" placeholder="Enter your email" required class="p-2 rounded-md text-gray-800" />
