--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,7 +4,8 @@
       <!-- Navbar Brand / Logo -->
       <div class="flex-shrink-0">
         <%= link_to home_index_path do %>
-          <%= image_tag("tablet.png", alt: "logo", class: "h-12 w-auto") %>
+          
+          <img src="/images/logo.svg" alt="logo" class="h-12 w-auto">
         <% end %>
       </div>
 
