--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -56,7 +56,7 @@
             </div>
 
             <div class="mt-4 pt-4 border-t border-gray-200">
-              <%= link_to "View Profile", profile_path(profile), 
+              <%= link_to "View Profile", user_path(profile), 
                   class: "bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-md text-sm font-medium transition-colors" %>
             </div>
           </div>
